add: visualization in page and complete project

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,2 +1,10 @@
 @import "~bootstrap/scss/bootstrap";
 
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+}
+
+.ms_card {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
